# C----

Adding and subtracting large numbers/: main.cpp  readme.md  reference_answer.cpp
New-Delete/: CMakeLists.txt
New-Delete/include/: NewAndDelete.h
New-Delete/src/: NewAndDelete.cpp  main.cpp
String/include/: String.h
String/src/: main.cpp
Vector/include/: Allocator.h  Vector.h
Vector/src/: main.cpp
